# template-project

./: .readthedocs.yaml  404.html  CHANGELOG.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  LICENSE  LICENSE.html  MANIFEST.in  index.html  mkdocs.yaml  objects.inv  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docs.yml  release.yml  tests.yml
dev/: Dockerfile  compose.yaml  requirements_app.txt  requirements_dev.txt  requirements_docs.txt  tox.ini
docs/: README.md
docs/site/: index.md
search/: search_index.js  search_index.json
site/: index.html
site/scripts/: __main__.py  generate_markdown.py  parse_docstring.py  update_mkdocs_config.py
tests/: context.py
