[metadata]
name = __template__
version = 0.0.1
description = __description__
long_description = file: docs/README.md, docs/CHANGELOG.md
long_description_content_type = text/markdown
author = __author__
author_email = __email__
url = __url__
project_urls =
    GitHub = __github__
    Documentation = __docs__
    Changelog = __changelog__
    Tracker = __issues__
license = MIT
keywords = 
    python
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy>=1.19
    pandas>=1.2
zip_safe = False

[options.packages.find]
where = src
exclude = tests

[options.package_data]
controllably = py.typed
* = *.json, *.yaml, *.png

[options.extra_require]
testing =
    flake8>=3.9
    mypy>=0.910
    pytest>=6.2
    pytest-cov>=2.11
    tox>=3.24

[flake8]
max-line-length = 160